--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
         "@babel/core": "^7.17.0",
         "@babel/preset-env": "^7.16.0",
         "@symfony/webpack-encore": "^4.0.0",
+        "autoprefixer": "^10.4.16",
         "core-js": "^3.23.0",
-        "regenerator-runtime": "^0.13.9"
+        "postcss": "^8.4.31",
+        "postcss-loader": "^7.3.3",
+        "regenerator-runtime": "^0.13.9",
+        "tailwindcss": "^3.3.5",
+        "webpack-notifier": "^1.15.0"
     },
     "license": "MIT",
     "private": true,
